--- a/wwwroot/css/daddy.css
+++ b/wwwroot/css/daddy.css
@@ -161,6 +161,7 @@ button.accept-policy {
 #login_box {
     background-color: var(--bg-4);
     border: 3px outset var(--bg-3);
+    border-radius: 25px;
     padding: 15px;
     display: flex;
     flex-wrap: wrap;
@@ -172,6 +173,10 @@ button.accept-policy {
 @media (min-width: 768px) {
     #header {
         height: 500px;
+    }
+
+    #login_box {
+        margin: 0px 20vw 0px 20vw;
     }
 }
 
